Bug 1822483 - Handle wraparounds in RAPL power counters on Intel Macs, r=dlrobertson.

Differential Revision: https://phabricator.services.mozilla.com/D174065